--- a/_config.yml
+++ b/_config.yml
@@ -6,27 +6,27 @@ theme: jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: en
+lang: ko-KR
 
 # Change to your timezone › https://zones.arilyn.cc
-timezone:
+timezone: Asia/Seoul
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: JJooo`s Blog # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: AI · Django · Blog · 일상 기록 # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  AI 영상처리, Django 백엔드, 잡담까지 기록하는 블로그
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://jjooo90.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: JJooo90 # change to your GitHub username
 
 twitter:
   username: twitter_username # change to your Twitter username
