CI에 raft 자동 제거 Step 추가

--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -36,6 +36,11 @@ jobs:
           # submodules: true
           # If using the 'assets' git submodule from Chirpy Starter, uncomment above
           # (See: https://github.com/cotes2020/chirpy-starter/tree/main/assets)
+      
+      - name: Clean generated artifacts
+        run: |
+          rm -rf raft
+          rm -rf _site
 
       - name: Setup Pages
         id: pages
