fix: enable giscus comments provider for Chirpy

--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ toc: true
 
 comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
-  provider: # [disqus | utterances | giscus]
+  provider: giscus # [disqus | utterances | giscus]
   # The provider options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -120,7 +120,6 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    active: giscus
     repo: JJooo90/jjooo90.github.io
     repo_id: "R_kgDOQhR28A"
     category: "General"
